# tomling

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.githooks/: util.sh
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_no_panic.rs
src/: array.rs  datetime.rs  error.rs  lib.rs  map.rs  parse.rs  serde.rs  table.rs  value.rs
src/cargo/: author.rs  bench.rs  binary.rs  dependency.rs  dev_dependency.rs  example.rs  features.rs  library.rs  manifest.rs  mod.rs  package.rs  resolver_version.rs  rust_edition.rs  target.rs  test.rs  workspace.rs
src/parse/: datetime.rs  ignored.rs  mod.rs  numbers.rs  strings.rs
tests/: simple.rs  tokio.rs  toml_test.rs  zbus.rs
