[package]
name = "tomling"
description = "A simple TOML parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
license = "MIT"
repository = "https://github.com/zeenix/tomling"
keywords = ["toml", "parser", "deserializer", "serde", "no-std"]
categories = ["parsing", "parser-implementations", "no-std"]
authors = ["Zeeshan Ali Khan <zeenix@gmail.com>"]

[features]
default = ["serde", "cargo-toml", "simd", "std"]
cargo-toml = ["serde"]
simd = ["winnow/simd"]
std = ["winnow/std", "serde?/std"]

[dependencies]
winnow = { version = "0.6.20", default-features = false, features = ["alloc"] }
serde = { version = "1.0.215", default-features = false, optional = true, features = [
    "derive",
    "alloc",
] }

[dev-dependencies]
toml-test-harness = "0.4.10"
