[package]
name = "tomling-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tomling]
path = ".."

[[bin]]
name = "parse_no_panic"
path = "fuzz_targets/parse_no_panic.rs"
test = false
doc = false
bench = false
